# ObjFormatReader

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD  main.cpp  objformat_reader.cpp  objformat_reader.h  structs.h  utility.h
benchmarks/: do_benchmarks.cpp  impl_benchmarks.cpp  objformat_benchmark.cpp  utility_benchmarks.cpp
test/: main.cpp  objformat_test.cpp  utility_test.cpp
